# cmrc

./: .gitignore  README.md  pyproject.toml
cmrc/: predict.py  train.py
cmrc/dataset/cmrc2018/: dataloader.py
cmrc/metrics/: metrics.py
cmrc/utils/: utils.py
data/predict/: metrics_result.json
src/: predict.py  train.py
src/dataset/cmrc2018/: dataloader.py
src/metrics/: metrics.py
